--- a/styles/styles.css
+++ b/styles/styles.css
@@ -716,15 +716,7 @@ body {
   display: flex;
   width: 1158px;
   padding-bottom: 56px;
-}
-
-.input-distribution {
-  width: 557px;
-  height: 55px;
-  background-color:transparent;
-  border-color: #C4C4C4;
-  border-width: 0 0 3px 0;
-  padding: 11px 16px 11px 16px;
+  align-items: flex-end;
 }
 
 .input-distribution {
@@ -734,6 +726,12 @@ body {
   font-size: 18px;
   line-height: 30px;
   color: #444444;
+  width: 557px;
+  height: 55px;
+  background-color:transparent;
+  border-color: #C4C4C4;
+  border-width: 0 0 3px 0;
+  padding: 11px 16px 11px 16px;
 }
 
 .button-distribution {
@@ -744,8 +742,7 @@ body {
   line-height: 21px;
   letter-spacing: 0.2em;
   width: 253px;
-  height: 55px;
-  padding: 18px 39px;
+  padding: 18px 30px;
   text-align: center;
   text-transform: uppercase;
   border: 3px solid #C4C4C4;
@@ -1151,19 +1148,29 @@ body {
 }
 
 .footer-social-network-links {
-  position: relative;
   display: block;
   width: 40px;
   height: 40px;
+}
+
+.footer-social-network-wrapper {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
   background: rgba(255, 255, 255, 0.3);
   border-radius: 50%;
 }
 
-.footer-social-network-links:hover {
+.footer-social-network-links:hover span{
   background: #FFC700;
 }
-.footer-social-network-links:active {
+.footer-social-network-links:active span{
   opacity: 0.3;
+}
+.footer-social-network-links:focus {
+  outline: 2px solid #AF4FFF;
+  border:0;
 }
 
 .footer-social-network-telegram {
